fixed pagination layout problem + fixed some charts overflowing outside their data container

--- a/src/main/web/src/app/shared/search/results-container.component.scss
+++ b/src/main/web/src/app/shared/search/results-container.component.scss
@@ -75,6 +75,12 @@ h3.results-title {
 	}
 }
 
+.results-body {
+	memo-pagination {
+		margin-top: 16px;
+	}
+}
+
 .content {
 	display: flex;
 	flex-direction: column;
